--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,12 @@
 {
-  "gcm_sender_id": "112273261716",
- //"gcm_sender_id": "824120095381"
+	"name": "Push Demo",
+	//"short_name": "Push Demo",
+	//"icons": [{
+		//"src": "images/icon-192x192.png",
+		//"sizes": "192x192"
+	//}],
+	//"start_url": "./index.html?homescreen=1",
+	//"display": "standalone",
+	//"gcm_sender_id": "824120095381"
+	"gcm_sender_id": "112273261716"
 }
